feat: path aliases
- new error ERR_ROOT_ALIAS: no puede haber root y alias en el mismo location
- fix: condicion de match de locations
- TOKEN_ERR messages with more info
- fix: no setear el root de location con el de server. dejarlo vacio
- ejemplos de contact.html con alias y root en default config (+ web updated)

--- a/www/about.html
+++ b/www/about.html
@@ -38,6 +38,9 @@
                 <li class="nav-item">
                     <a class="nav-link nav-link-4" href="contact.html">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-link-5" href="webinfo/info.html">Image Storage</a>
+                </li>
             </ul>
             </div>
         </div>
