--- a/www/webdev/info.html
+++ b/www/webdev/info.html
@@ -37,7 +37,7 @@
     </nav>
     <div class="container tm-container-content tm-mt-60">
         <h2 class="mb-4">Stored Images</h2>
-		<p class="mt-4">Images by ByteByteGo. Images folder: <code>www/webinfo/imgs/</code>.</p>
+		<p class="mt-4">Images by ByteByteGo. Images folder: <code>www/webdev/imgs/</code>.</p>
         <div class="row tm-gallery" id="image-gallery">
         <!-- Gallery -->
             <div class="col-12 d-flex flex-column align-items-center mb-5">
