--- a/www/index.html
+++ b/www/index.html
@@ -37,7 +37,7 @@
                     <a class="nav-link nav-link-4" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-link-5" href="webinfo/info.html">Image Storage</a>
+                    <a class="nav-link nav-link-5" href="webdev/info.html">Image Storage</a>
                 </li>
             </ul>
             </div>
