refactor: resolve_path with subroutines

--- a/www/contactalias/index.html
+++ b/www/contactalias/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index in ContactAlias directory</title>
+    <title>Index</title>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; padding: 20px; color: #333; background-color: #f8f8f8; }
         .error { font-size: 48px; font-weight: bold; color: #3c59e7; }
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <h1>Index</h1>
+    <h1>Index in ContactAlias directory</h1>
     <div class="message">
         Hi there! Welcome to the index page.
     </div>
